@@ -1,3 +1,9 @@
+2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* schedule.*: Made Eat_at_inn clear food when ending. Fix bug
+		where leftover food in oven would be set to a random frame.
+		Set the maximum display count for clothes to 3. Remove
+		schedule ending exceptions.
+
 2010-12-20 Dominik Reichardt <dominus@users.sourceforge.net>
 	* configure.ac: fixed X11 includes on FeeBSD, and warning of ==
 	
